--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
     <head>
         {% if jekyll.environment  == "production" %}
-        {% assign basepath = "/resourceful" %}
+        {% assign basepath = "/" %}
         {%else%}
         {% assign basepath = "" %}
         {% endif %}
