--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,7 +21,7 @@ body{
     // border: 3px solid blue;
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: #1C8DE2;
+    background-color: #14639e;
     height: 400px;
     object-fit: fill;
 }
