--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,7 +21,7 @@ body{
     // border: 3px solid blue;
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: #14639e;
+    background-color: #3d2df0;
     height: 400px;
     object-fit: fill;
 }
@@ -42,7 +42,7 @@ body{
 .maintopic{
     display: inline-block;
     text-transform: uppercase;
-    color: #7B1818;
+    color: #f0952d;
     padding:0px 0px 3px 0px;
     font-size: 2.5em;
     font-weight: bold; 
