--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -57,7 +57,7 @@ body{
     font-size: 2.5em;
     text-shadow: 1px 1px #50505015;
     font-weight: medium; 
-    color: #7B1818;
+    color: #f0952d;
 }
 .border{
     border: 2px solid black;
