--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,7 +21,7 @@ body{
     // border: 3px solid blue;
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: #7ba8db;
+    background-color: #FFFFFF;
     height: 400px;
     object-fit: fill;
 }
@@ -42,7 +42,7 @@ body{
 .maintopic{
     display: inline-block;
     text-transform: uppercase;
-    color: #dba07b;
+    color: #0073e6;
     padding:0px 0px 3px 0px;
     font-size: 2.5em;
     font-weight: bold; 
@@ -57,7 +57,7 @@ body{
     font-size: 2.5em;
     text-shadow: 1px 1px #50505015;
     font-weight: medium; 
-    color: #dba07b;
+    color: #0073e6;
 }
 .border{
     border: 2px solid black;
